// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`.addListener() adds given listeners at most once 1`] = `
Emitter {
  "p_listeners": [
    [MockFunction A],
  ],
}
`;

exports[`.addListener() adds given listeners at most once 2`] = `
Emitter {
  "p_listeners": [
    [MockFunction A],
  ],
}
`;

exports[`.addListener() adds given listeners at most once 3`] = `
Emitter {
  "p_listeners": [
    [MockFunction A],
    [MockFunction B],
  ],
}
`;

exports[`.addListener() adds given listeners at most once 4`] = `
Emitter {
  "p_listeners": [
    [MockFunction A],
    [MockFunction B],
  ],
}
`;

exports[`.addListener() removes functional unsubscribe function 1`] = `
Emitter {
  "p_listeners": [
    [MockFunction A],
    [MockFunction B],
    [MockFunction C],
  ],
}
`;

exports[`.addListener() removes functional unsubscribe function 2`] = `
Emitter {
  "p_listeners": [
    [MockFunction A],
    [MockFunction C],
  ],
}
`;

exports[`.addListener() removes functional unsubscribe function 3`] = `
Emitter {
  "p_listeners": [
    [MockFunction A],
  ],
}
`;

exports[`.addListener() removes functional unsubscribe function 4`] = `
Emitter {
  "p_listeners": [
    [MockFunction A],
  ],
}
`;

exports[`.emit() calls connected listeners with given arguments 1`] = `
[
  [
    "ARG1",
    "arg2",
  ],
]
`;

exports[`.emit() calls connected listeners with given arguments 2`] = `
[
  [
    "ARG1",
    "arg2",
  ],
]
`;

exports[`.emit() calls connected listeners with given arguments 3`] = `
[
  [
    "ARG1",
    "arg2",
  ],
]
`;

exports[`.emit() calls connected listeners with given arguments 4`] = `
[
  [
    "ARG1",
    "arg2",
  ],
  [
    "second call",
  ],
]
`;

exports[`.removeListener() removes given listener if it is connected 1`] = `
Emitter {
  "p_listeners": [
    [MockFunction A],
    [MockFunction B],
    [MockFunction C],
    [MockFunction D],
  ],
}
`;

exports[`.removeListener() removes given listener if it is connected 2`] = `
Emitter {
  "p_listeners": [
    [MockFunction B],
    [MockFunction C],
    [MockFunction D],
  ],
}
`;

exports[`.removeListener() removes given listener if it is connected 3`] = `
Emitter {
  "p_listeners": [
    [MockFunction B],
    [MockFunction D],
  ],
}
`;

exports[`.removeListener() removes given listener if it is connected 4`] = `
Emitter {
  "p_listeners": [
    [MockFunction B],
    [MockFunction D],
  ],
}
`;

exports[`constructor() creates a new emitter with empty listeners array 1`] = `
Emitter {
  "p_listeners": [],
}
`;
